--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RetrofitLibraryPractice</string>
+    <string name="facebook_app_id">855519138472425</string>
+    <string name="fb_login_protocol_scheme">fb855519138472425</string>
 </resources>
